# Firefly-Paralelo

./: .CMakeLists.txt.swp  .MPI.h.swp  .main_FF.cpp.swo  .ycm_extra_conf.py  CMakeLists.txt  Cluster.h  FF_Guilherme  FF_Guilherme (UX501VW's conflicted copy 2018-03-21)  HSVimg.cpp  HSVimg.h  Image.cpp  Image.h  Imageff.h  Lde.hpp  MPI.h  Slave.h  bests.h  calchistgray.h  calchistgray.h.autosave  entropy.h  firefly  firefly.h  grayseg.h  histogram.h  hsv-a.h  incl.h  main_FF.cpp  multilimiarizacao.h  node.hpp  tsallis.h  untitled6.pro
